--- a/XamarinForms1/XamarinForms1/XamarinForms1.csproj
+++ b/XamarinForms1/XamarinForms1/XamarinForms1.csproj
@@ -36,6 +36,7 @@
     <Compile Include="MyPage.cs" />
     <Compile Include="CarouselPage.cs" />
     <Compile Include="TabbedPage.cs" />
+    <Compile Include="SingleTappedPage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
