--- a/XamarinForms1/iOS/XamarinForms1.iOS.csproj
+++ b/XamarinForms1/iOS/XamarinForms1.iOS.csproj
@@ -108,6 +108,7 @@
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
     <None Include="packages.config" />
+    <None Include="Resources\uk.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
